# Spend_Wise

./: .env.example  .gitignore  Design and step.txt  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  requirements_new.txt
config/: logging.py  settings.py
controller/: auth_controller.py  budget_controller.py  expense_controller.py  financial_health_controller.py  income_controller.py  notification_controller.py  smart_categorization_controller.py  subscription_controller.py  user_controller.py
database/: budget_query.py  database_connection.py  expense_query.py  income_query.py  migration.sql  notification_query.py  user_query.py
model/: budget.py  expense.py  income.py  notification.py  user.py
requirements/: base.txt
src/api/validators/: request_validators.py
src/repositories/: base_repository.py
src/services/: base_service.py
tests/: conftest.py  user_controller_test.py
tests/unit/: test_financial_health_service.py
utils/: api_service.py  authentication.py  calculator_service.py  expense_categorizer.py  financial_health.py  response.py  subscription_manager.py  validation.py
utils/Localization/: localization_service_old.py  locals.py
utils/Localization/am/: messages.po
utils/Localization/en/: messages.po
utils/service/: reporting_service.py
utils/service/file/: file_download_service.py  file_management_service.py  file_upload_service.py
